Fixed issue with the team view where fifth team would jump on the second row.

--- a/PrjctMngmt/PrjctMngmt.WebUI/Content/Site.css
+++ b/PrjctMngmt/PrjctMngmt.WebUI/Content/Site.css
@@ -519,7 +519,7 @@ div#title {
     width: 15%;
     min-height: 5em; 
     padding: 1%;
-    margin: 1% 1% 1% 2%;
+    margin: 1% 1% 1% 0%;
 } 
 * html .teams
 { 
